[tool.poetry]
name = "repos"
version = "0.1.0"
description = ""
authors = ["wyn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
aliyun-python-sdk-core = "2.15.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
